# EC-kitty-carbon

./: .gitignore  README.md  amdPowerLog.txt  config_energy.json  emissions.csv  energy_report.csv  powermetrics_log.txt  pyproject.toml
eckity_carbon/: __init__.py  one_max_problem_float.py
