[tool.poetry]
name = "ec-kitty-carbon"
version = "0.1.0"
description = "Testing energy consumption of eckity"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
eckity = "^0.3.4"
codecarbon = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
